# omnibenchmark-py

./: README.md  mypy.ini  pyproject.toml
.github/workflows/: python-package.yml
omnibenchmark/: __init__.py
omnibenchmark/core/: __init__.py  input_classes.py  omni_object.py  output_classes.py
omnibenchmark/management/: __init__.py  data_checks.py  data_commands.py  general_checks.py  parameter_checks.py  run_commands.py  wflow_checks.py
omnibenchmark/renku_commands/: __init__.py  datasets.py  general.py  renku_api  renku_api.py  workflows.py
omnibenchmark/test/: conftest.py  pytest.ini
omnibenchmark/test/core/: conftest.py  test_core_omni_command.py  test_core_omni_input.py  test_core_omni_output.py  test_core_omni_parameter.py
omnibenchmark/test/managment/: conftest.py  ex_filter.json  test_management_data_checks.py  test_management_data_commands.py  test_management_general_checks.py  test_management_parameter_checks.py  test_management_run_commands.py  test_managment_wflow_checks.py
omnibenchmark/test/renku_commands/: test_renku_commands_datasets.py
omnibenchmark/test/utils/: conftest.py  ex_config.yaml  ex_filter.json  ex_param.json  test_benchmark_queries.py  test_build_omni_object.py  test_utils_auto_command.py  test_utils_auto_input.py  test_utils_auto_output.py  test_utils_auto_run.py
omnibenchmark/utils/: __init__.py  auto_command.py  auto_input.py  auto_output.py  auto_run.py  benchmark_queries.py  build_omni_object.py  context_manager.py  decorators.py  default_global_vars.py  exceptions.py  general.py  log.py  user_input_checks.py
(+2 files in other folders)
